--- a/instadclair/templates/general/profile_detail.html
+++ b/instadclair/templates/general/profile_detail.html
@@ -128,7 +128,7 @@
                     {% for post in user_profile.user.posts.all|dictsortreversed:"created_at" %}
                         <div class="col-md-4 mb-4">
                             <div class="card h-100">
-                                <a href="{% url 'post_detail' post.id %}">
+                                <a href="{% url 'posts:post_detail' post.id %}">
                                     <img src="{{ post.image.url }}" class="card-img-top" 
                                          alt="{{ post.caption|truncatechars:30 }}"
                                          style="height: 300px; object-fit: cover;">
