--- a/instadclair/templates/_includes/_header.html
+++ b/instadclair/templates/_includes/_header.html
@@ -10,7 +10,7 @@
         <li><a href="{% url 'register' %}">Register</a></li>
         {% else %}        
         <li><a href="{% url 'logout' %}">Logout</a></li>
-        <li><a href="{% url 'post_create' %}">Crear Post</a></li>
+        <li><a href="{% url 'posts:post_create' %}">Crear Post</a></li>
         <li><a href="{% url 'profile' request.user.profile.pk %}">Mi Perfil</a></li>
         {% endif %}
         
